# SocketProxy

./: .gitignore  Makefile  Makefile.am  README  README.md  configure.ac
doc/: build.txt  design.txt  dlsym.txt  fifo.txt  m4_and_perl.txt  make_a_shared_object.txt  references.txt  serialization.txt  style.txt  todos.txt
doc/license/: stub.c  stub.pl  stub.txt
lib/: libmike.so.1  libmike.so.1.bak
src/: Makefile  Makefile.am
src/agent/: Makefile  soxprox-agent.pl  soxprox-agent.pl.m4
src/ref/: Makefile  hello.c  is_closed.c  perl_fifo.pl  perl_sample_ud_client.pl  perl_sample_ud_server.pl  perl_socketpair.pl  serialization.pl  server_to_client.pl  socketpair_test.c  socketpair_ud.pl  sp_fifo_server.pl  test_shadow.c  test_shadow_cpp.c  test_true.c
src/ref/dlsym/: .fake_crypt.c.swp  Makefile  fake_crypt.c  fake_crypt.sh  target.c
src/ref/perl_testing/: test_world.pl  truth.t
src/ref/uds/: Makefile  uds_echo_client  uds_echo_client.c  uds_echo_server  uds_echo_server.c
src/scripts/: Makefile.am  c_serial.sh  does_socketpair_call_socket.sh  fake_socket.sh  test_agent.sh  test_nc.sh  test_nc2.sh  test_nmap.sh
src/server/: .perltidyrc  Makefile  Makefile.am  soxprox.pl  soxprox.pl.bak  soxprox.pl.m4
src/shared/: soxprox-shared.pl
src/test/: Makefile  fake_malloc.c  fake_socket.c  serialize_test.c  socket_test.c  socketpair_test.c  test_client.c  test_is_closed.c
